# aaagents-oss

./: .env.example  .env.oss.example  .licenses.md  CLAUDE.md  CONTRIBUTING.md  DISCLAIMER.md  Dockerfile  Dockerfile.backend  LICENSE-MODELS  Makefile  NOTICE  README.md  config.py  docker-compose.oss.yml  index.html  package-lock.json  package.json  pyproject.toml  requirements-ci.txt  requirements.txt  serve_public_api.py  setup.ps1  setup.sh  update_logger.py  vite.config.ts
.github/workflows/: oss-ci.yml  publish-docker-images.yml
aaagents/: README.md  pyproject.toml
aaagents/aaagents/: __init__.py  cli.py
aaagents/aaagents.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
alembic/versions/: 0002_worm_mifid_trigger.py
core/: auth_interfaces.py  cloud_logger.py  compliance.py  data_provider.py  exceptions.py  gemini_client.py  keychain_cli.py  kill_switch.py  latency_watchdog.py  local_state_client.py  market_scanner.py  news_processor.py  polygon_data.py  portfolio_manager.py  redis_client.py  risk_manager.py  secret_manager_utils.py  simulation.py  stock_specialist.py  telemetry.py  user_wallet_store.py  utils.py
core/database/: session.py
core/engine/: __main__.py  api_routes.py  base.py  health.py  monitor_loop.py  news_poller.py  order_executor.py  trading_loop.py
core/learning/: engine.py
data/: models_manifest.json
models/: torch_model.py  trading_environment.py
scripts/: build_models_manifest.py  gcs_sync_on_start.py  setup_oss_models.sh  shadow_boot.py
src/: App.tsx
tests/: conftest.py  test_shadow_boot.py
(+89 files in other folders)
