[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aaagents"
version = "0.1.0"
description = "BORA OSS — Plug & Run CLI for the AAA Trading Platform"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
keywords = ["trading", "algorithmic", "bora", "oss", "docker"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
]

[project.scripts]
aaagents = "aaagents.cli:app"

[project.urls]
Homepage = "https://github.com/Autonomous-Asset-Management-Agents/Dev-Enviroment"
Documentation = "https://github.com/Autonomous-Asset-Management-Agents/Dev-Enviroment/blob/main/docs/oss/ARCHITECTURE.md"
Repository = "https://github.com/Autonomous-Asset-Management-Agents/Dev-Enviroment"
Issues = "https://github.com/Autonomous-Asset-Management-Agents/Dev-Enviroment/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["aaagents*"]
